fixed overlap in header between nav menu and site-title

--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -449,7 +449,7 @@ body .menu-toggle {
 		color: white;
 		padding-left: 15px;
 		text-transform: uppercase;
-		font-size: 1.3rem;
+		font-size: 1.1rem;
 		font-weight: 400;
 		padding-top: 20px;
 
